# prikura

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  face_processor.py  main.py  requirements.txt  retouch.py
backend/beauty/: __init__.py  color.py  landmarks.py  pipeline.py  smoothing.py  warp.py
documents/: docker-without-desktop-mac.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: FrameCanvas.svelte  PenCanvas.svelte  PenPalette.svelte  RetouchSliders.svelte  StampPanel.svelte
frontend/src/pens/: group1_effects.ts  group2_basic.ts  group3_texture.ts  group4_transparent.ts  index.ts
frontend/src/phases/: Camera.svelte  Edit.svelte  Setup.svelte
frontend/src/stores/: appState.ts  bgmStore.ts
frontend/src/wasm/: penEngineLoader.ts
nginx/: Dockerfile  entrypoint.sh  nginx.conf
pen_engine/: CMakeLists.txt  build.sh
pen_engine/src/: stroke_interpolator.cpp
pen_engine/src/effects/: crayon.cpp  jitter.cpp  neon.cpp  pukkuri.cpp
